--- a/gen/templates/gen/edit.html
+++ b/gen/templates/gen/edit.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% set link = "static/" + user.profile_picture %}
-    <form method="POST" action="/edit">
+    <form method="POST" action="/change">
         <input type="username" value="{{ user.username }}" name="username" required>
         <br>
         <textarea name="bio" required>{{ user.bio }}</textarea>
@@ -14,6 +14,6 @@
             <input onchange="loadFile(event)" type="file" id="imagePicker" accept="image/*" name="imagePicker" required>
             <img id="preview" width="50" height="40"/>
         </div>
-        <button type="submit">Edit profile</button>
+        <button type="submit">Save changes</button>
     </form>
 {% endblock %}
