--- a/gen/templates/gen/edit.html
+++ b/gen/templates/gen/edit.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% set link = "static/" + user.profile_picture %}
-    <form method="POST" action="/change">
+    <form method="POST" action="/edit">
         <input type="username" value="{{ user.username }}" name="username" required>
         <br>
         <textarea name="bio" required>{{ user.bio }}</textarea>
