--- a/auth/templates/auth/signup.html
+++ b/auth/templates/auth/signup.html
@@ -9,7 +9,7 @@
     <br>
     <input type="password" placeholder="Password" name="password" required>
     <br>
-    <input type="text" placeholder="Email" name="email" required>
+    <input type="email" placeholder="Email" name="email" required>
     <br>
     <div id="fileButton2">
         <label for="imagePicker" id="fileButton">Image for profile picture</label>
