--- a/gen/templates/gen/book.html
+++ b/gen/templates/gen/book.html
@@ -74,7 +74,7 @@
                     {% endfor %}
                 <form method="POST" action="/dislike">
                     <input type="hidden" name="reviewID" value="{{ review.id }}">
-                    <button hx-post="/dislike" hx-trigger="click" hx-swap="none" id="dislike">👎{{ ns.dislikeCount }}</button>
+                    <button hx-post="/dislike" hx-trigger="click" id="dislike">👎{{ ns.dislikeCount }}</button>
                 </form>      
             {% endif %}
         {% endfor %}
