--- a/auth/templates/auth/signup.html
+++ b/auth/templates/auth/signup.html
@@ -17,6 +17,7 @@
         <img id="preview" width="50" height="40"/>
     </div>
     <br>
+    <p>Bio</p>
     <textarea name="bio" required></textarea>
     <br>
     <button type="submit">Submit</button>
