--- a/gen/templates/gen/book.html
+++ b/gen/templates/gen/book.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div id="con3">
-<h2>{{ book.title }}</h2>
+<h2 id="bookTitle">{{ book.title }}</h2>
 {% set r = 0 %}
 {% set nsg = namespace(r=r) %}
 {% set count = 0 %}
@@ -128,18 +128,22 @@
                         <button hx-post="/dislike" hx-trigger="click" hx-target="#like_dislike{{ review.id }}" id="dislike">👎{{ ns.dislikeCount }}</button>
                     </form> 
                 </div> 
+                <br>
+                <br>
             {% endif %}
         {% endfor %}
     {% endif %}
     {% set nsg.count = nsg.count|int + 1 %}
 {% endfor %}
-<form method="POST" action="/review">
-    <input type="text" placeholder="Title" name="title" required>
-    <input type="range" name="rating" min="0.5" max="5" step="0.5" value="5" class="rating" style="--val:5" oninput="this.style='--val:'+this.value" required>
-    <br>
-    <textarea name="review" required></textarea>
-    <br>
-    <button type="submit">Make a review</button>
-</form>
+<div id="reviewMaker">
+    <form method="POST" action="/review">
+        <input type="text" placeholder="Title" name="title" required>
+        <input type="range" name="rating" min="0.5" max="5" step="0.5" value="5" class="rating" style="--val:5" oninput="this.style='--val:'+this.value" required>
+        <br>
+        <textarea name="review" required></textarea>
+        <br>
+        <button type="submit">Make a review</button>
+    </form>
+</div>
 
 {% endblock %}
