--- a/static/main.css
+++ b/static/main.css
@@ -240,6 +240,21 @@ svg {
     padding-left: 0;
 }
 
+#book_picture {
+    width: 267px;
+    height: 400px;
+    background-size: cover;
+    border: 2px solid rgb(69, 68, 68);
+    border-radius: 5px;
+    padding-left: 0;
+    margin-bottom: 20px;
+}
+
+#book {
+    width: 40%;
+    margin: auto;
+}
+
 #blurb {
     margin-right: 10px;
     padding: 0.5em;
